--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,14 @@
 .container {
   width: 80%;
   margin: auto;
-  padding: 10px;
+  padding: 4px;
   overflow: hidden;
+}
+
+.center {
+  margin: auto;
+  width: 50%;
+  padding: 10px;
 }
 
 .left {
@@ -13,6 +19,20 @@
   margin-left: 15%;
 }
 
+#outer
+{
+    width:100%;
+    text-align: center;
+}
+.inner
+{
+    display: inline-block;
+}
+.slider-label {
+  margin-left: 80px;
+}
+
 .slider {
-  margin-top: 20px;
+  margin-top: 5px;
+  margin-left: 80px;
 }
